# simpleForTests

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  assert.f95
modules/: assert.f95  utils.f95
src/: assert.f95  suit.f95  suite.f95  utils.f95
